# rusty-release

./: .rusty-release.toml  CHANGELOG  Cargo.toml  README.md
src/: cargo.rs  cargo_proj.rs  cargo_toml.rs  config.rs  cr_result.rs  git.rs  main.rs  rr_result.rs  utils.rs  version_kind.rs
