[package]
name = "rusty-release"
version = "0.5.0"
authors = ["Daniel Trstenjak <daniel.trstenjak@gmail.com>"]
license = "BSD-3-Clause"
description = "Make a release of a cargo project"
repository = "https://github.com/dan-t/rusty-release"
readme = "README.md"

[dependencies]
clap = "~2.2.6"
term = "0.4.6"
tempfile = "2.2.0"
toml = "~0.4.5"
semver = "0.9.0"
serde = "~1.0.27"
serde_derive = "~1.0.27"
